# Engine

./: .gitignore  .gitmodules  CMakeLists.txt  hello.lua
Debug/: Engine
Games/: Game.h  Pong.cpp  Pong.h
Games/Pong/: Pong.h  options.xml
data/: Rectangle.lua  main.lua  options.xml
doc/: sublime-doc
include/: EngineTypes.h  ResourceManager.h  Texture.h  Variant.h  globals.h  utility.h
include/enteties/: Entity.h
include/entities/: Actor.h  ActorComponent.h  ActorFactory.h  ComponentEntity.h  Entity.h
include/eventSystem/: Event.h  EventQueue.h
include/graphicWrapper/: Rectangle.h  Sprite.h  Vector.h  Window.h
include/luaApi/: LuaState.h  LuaValue.h
include/plainLogging/: logger.hpp
include/xmlWrapper/: Xml.h
lib/SFML/: libsfml-audio.2.4.0.dylib  libsfml-graphics.2.4.0.dylib  libsfml-network.2.4.0.dylib  libsfml-system.2.4.0.dylib  libsfml-window.2.4.0.dylib
src/: Texture.cpp  main.cpp
src/SFML/: Texture.cpp
src/entities/: Entities.cpp
src/eventSytem/: Event.cpp
src/graphicWrapper/: Rectangle.cpp
src/tinyXML/: tinyxml2.cpp
src/xmlWrapper/: Xml.cpp
